# superpowers-ccg

./: .gitignore  .mcp.json  CLAUDE.md  FRONTEND.md  README-zh.md  README.md  RELEASE-NOTES.md  bash.exe.stackdump  mcp_config.json  package.json  plugin.json  plugin.json.disabled  superpowers-ccg.md
.agents/: BACKEND.md  FRONTEND.md
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
openmcp/openmcp/: AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
openmcp/openmcp/.agents/: FRONTEND.md
openmcp/openmcp/.agents/shared/: erp.md  worker-contract.md
openmcp/openmcp/.serena/: project.yml
openmcp/openmcp/docs/plans/: 2026-06-15-notify-compression-integration-design.md
openmcp/openmcp/docs/plans/2026-06-15-notify-compression-integration/: .handover.md  PLAN.md
openmcp/openmcp/docs/plans/2026-06-15-notify-compression-integration/phase-01/: journal.md  notes.md  prompt.md
openmcp/openmcp/docs/plans/2026-06-15-notify-compression-integration/phase-02/: journal.md  notes.md  prompt.md
openmcp/openmcp/docs/plans/agy-plugin-winpty-sessionid/phase-01/: journal.md  notes.md  prompt.md
openmcp/openmcp/docs/plans/backend-refactor-optimize/phase-01/: journal.md  notes.md  prompt.md
openmcp/openmcp/docs/plans/remove-gemini-ttc/phase-01/: journal.md  notes.md  prompt.md
openmcp/openmcp/src/openmcp/: __init__.py  cli.py  compression.py  logging_setup.py  notify.py  retry.py  server.py  session_marker.py
openmcp/openmcp/src/openmcp/backends/: __init__.py  _shell.py  agy.py  codex.py  gemini.py
openmcp/openmcp/tests/: conftest.py  test_compression.py  test_live_backends.py  test_notify.py  test_smoke.py
(+281 files in other folders)
